btn align fix

--- a/assets/styles/03-elements/buttons.scss
+++ b/assets/styles/03-elements/buttons.scss
@@ -138,10 +138,10 @@
       1- Home tabs block
     */
 	&--md-arrow {
-		@apply border text-gray-500 rounded-full w-10 h-10 text-xl;
+		@apply inline-flex items-center justify-center border text-gray-500 rounded-full w-10 h-10 text-xl;
 
     &.light{
-      @apply text-white border-white leading-none;
+      @apply text-white border-white;
     }
 	}
 
